# tradingbot-v1.1

./: .env.example  .gitattributes  .gitignore  AI_WORKFLOW.md  README.md  SECURITY.md  alembic.ini  main.py  pyproject.toml  requirements.txt  start_ai_training.py  start_ai_training_gui.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
ai_engine/: mirofish_client.py
api/: app.py  app.py.bak  auth.py  auth.py.bak  dependencies.py
calendar/: __init__.py  event_fetcher.py  event_filter.py  event_repository.py  event_rules.py  event_service.py  models.py
config/: settings.py
correlation/: __init__.py  asset_fetcher.py  correlation_calculator.py  snapshot.py
dashboard/: app.py  utils.py
database/: connection.py  models.py
exit_engine/: __init__.py  dynamic_sl.py  dynamic_tp.py  exit_signals.py  partial_close.py  trailing_manager.py  types.py
goldbot-control-app/: .gitignore  README.md
market_data/: broker_client.py  data_provider.py  historical.py  indicators.py  orderflow_stream.py
mirofish_seeds/: gold_market_30_experts.md  gold_market_actors.md  gold_market_overview.md  news_sentiment.md  xauusd_macro_factors.md
monitoring/: health.py  latency_check.py  logger.py  model_monitor.py  watchdog_service.py
notifications/: confirmation_handler.py  message_templates.py  notification_manager.py  whatsapp_sender.py
order_management/: order_executor.py  order_manager.py  position_monitor.py  trailing_stop.py
portfolio/: performance_analyzer.py  pnl_calculator.py
risk/: __init__.py  equity_curve_filter.py  kelly_calculator.py  kill_switch.py  monte_carlo.py  portfolio_heat.py  position_sizer.py  position_sizing.py  (+3 more)
(+505 files in other folders)
