[project]
name = "gold-trader"
version = "2.0.0"
description = "KI-gestuetztes Gold (XAU/USD) Trading System mit XGBoost + LightGBM"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ML / AI (runs on CPU, no GPU needed)
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "joblib>=1.4.0",

    # Data
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b1",
    "numpy>=2.2.4",

    # Broker / HTTP
    "requests>=2.32.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",

    # Notifications
    "twilio>=9.3.0",

    # Monitoring
    "structlog>=24.4.0",

    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "config*", "market_data*", "ai_engine*", "strategy*", "risk*",
    "order_management*", "portfolio*", "notifications*", "monitoring*",
    "api*", "dashboard*", "database*", "shared*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
